--- a/sdx-lc/Dockerfile
+++ b/sdx-lc/Dockerfile
@@ -2,11 +2,15 @@
 FROM os_base
 
 # set work directory
-RUN mkdir -p /app
-WORKDIR /app
+RUN mkdir /var/lib/kytos
+RUN mkdir /var/run/kytos
+RUN mkdir /var/tmp/kytos
+RUN mkdir /etc/kytos
+
+RUN mkdir -p /usr/src/kytos
+WORKDIR /usr/src/kytos
 
 # add app
-COPY ./app /app/
-
-# run server
-COPY wsgi.py /wsgi.py
+COPY kytos_install.sh .
+RUN chmod 755 /usr/src/kytos/kytos_install.sh
+ENTRYPOINT ["./kytos_install.sh"]
