--- a/mininet/Dockerfile
+++ b/mininet/Dockerfile
@@ -1,16 +1,12 @@
 # pull os base image
 FROM os_base
 
-# set work directory
-RUN mkdir /var/lib/kytos
-RUN mkdir /var/run/kytos
-RUN mkdir /var/tmp/kytos
-RUN mkdir /etc/kytos
-
-RUN mkdir -p /usr/src/kytos
-WORKDIR /usr/src/kytos
+RUN mkdir -p /usr/src/mininet
+WORKDIR /usr/src/mininet
 
 # add app
-COPY kytos_install.sh .
-RUN chmod 755 /usr/src/kytos/kytos_install.sh
-ENTRYPOINT ["./kytos_install.sh"]
+COPY link-hosts.py .
+RUN chmod 755 /usr/src/mininet/link-hosts.py
+COPY start_mininet.sh .
+RUN chmod 755 /usr/src/mininet/start_mininet.sh
+# ENTRYPOINT ["./start_mininet.sh"]
