--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,18 @@
 version: '3.8'
 
+networks:
+  nginx-proxy:
+    external: true
+
 services:
   mongodb:
     container_name: mongo_db
     image: mongo_db
     volumes:
       - ./data/db:/app/data/db
+    networks:
+      nginx-proxy:
+        ipv4_address: 172.20.0.2
     ports:
       - 27017:27017
   sdxapi:
@@ -14,6 +21,9 @@ services:
     restart: always
     volumes:
       - ./app/:/app/
+    networks:
+      nginx-proxy:
+        ipv4_address: 172.20.0.3
     ports:
       - 8800:8800
     environment:
@@ -26,6 +36,9 @@ services:
     container_name: amlight
     image: amlight
     restart: always
+    networks:
+      nginx-proxy:
+        ipv4_address: 172.20.0.4
     ports:
       - 6653:6653
       - 8181:8181
@@ -33,6 +46,9 @@ services:
     container_name: sax
     image: sax
     restart: always
+    networks:
+      nginx-proxy:
+        ipv4_address: 172.20.0.5
     ports:
       - 6654:6653
       - 8182:8181
@@ -40,9 +56,23 @@ services:
     container_name: tenet
     image: tenet
     restart: always
+    networks:
+      nginx-proxy:
+        ipv4_address: 172.20.0.6
     ports:
       - 6655:6653
       - 8183:8181
+  mininet:
+    container_name: mininet
+    image: mininet
+    restart: always
+    depends_on:
+      - amlight
+      - sax
+      - tenet
+    networks:
+      nginx-proxy:
+        ipv4_address: 172.20.0.7
   nginx:
     container_name: nginx_ws
     image: nginx_ws
@@ -50,3 +80,7 @@ services:
       - 80:80
     depends_on:
       - sdxapi
+    networks:
+      nginx-proxy:
+        ipv4_address: 172.20.0.8
+
