migrating docker to postman

--- a/container-mininet/Dockerfile
+++ b/container-mininet/Dockerfile
@@ -3,8 +3,8 @@ FROM ubuntu_base
 USER root
 WORKDIR /root
 
-COPY start_mininet.sh /
-COPY link-hosts.py /
+COPY ./container-mininet/start_mininet.sh /
+COPY ./container-mininet/link-hosts.py /
 RUN chmod +x /start_mininet.sh
 RUN chmod 775 /link-hosts.py
 
