--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,10 +34,10 @@ services:
   mininet:
     container_name: mininet
     image: mininet
-    restart: always
-    network:
-      kytos_network:
-        ipv4_address: 192.168.0.5
+    privileged: true
+    network_mode: "host"
+    volumes:
+      - /lib/modules:/lib/modules
     depends_on:
       - amlight
       - sax
