Print podman info

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -64,6 +64,10 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install podman-compose
 
+      - name: Print podman info
+        run: |
+          podman info --debug
+          
       - name: Print versions
         run: |
           podman version
