Set up podman virtual machine

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -66,6 +66,21 @@ jobs:
         run: |
           podman system connection list
 
+      - name: Set up podman virtual machine [macOS]
+        if: matrix.os == 'macos-latest'
+        run: |
+          echo "====== Running `podman machine init` ======"
+          podman machine init
+
+          echo "====== Running `podman machine start` ======"
+          podman machine start
+
+          echo "====== Running `podman machine list` ======"
+          podman machine list
+
+          echo "====== Running `podman system connection list` ======"
+          podman system connection list
+
       - name: Print podman info
         run: |
           podman info --debug
