--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -72,8 +72,8 @@ jobs:
           echo "====== Running `podman machine init` ======"
           podman machine init
 
-          echo "====== Running `podman machine start` ======"
-          podman machine start
+          # echo "====== Running `podman machine start` ======"
+          # podman machine start
 
           echo "====== Running `podman machine list` ======"
           podman machine list
