Run podman-compose up
No images are built at this point. Let us see what happens!

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -91,3 +91,6 @@ jobs:
           echo "====== Running: podman-compose version ======"
           podman-compose version
 
+      - name: Run podman-compose up
+        run: |
+          podman-compose up
