--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -93,6 +93,9 @@ jobs:
 
       - name: Build container images
         run: |
+          echo "Running: podman build -f ./os_base/debian_base/Dockerfile -t debian_base ."
+          podman build -f ./os_base/debian_base/Dockerfile -t debian_base .
+
           echo "Running: podman build -f ./container-amlight/Dockerfile -t amlight ."
           podman build -f ./container-amlight/Dockerfile -t amlight .
 
