--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -99,6 +99,9 @@ jobs:
           echo "Running: podman build -f ./os_base/ubuntu_base/Dockerfile -t ubuntu_base ."
           podman build -f ./os_base/ubuntu_base/Dockerfile -t ubuntu_base .
 
+          echo: "Running: podman build -f ./container-mininet/Dockerfile -t mininet ."
+          podman build -f ./container-mininet/Dockerfile -t mininet .
+
           echo "Running: podman build -f ./container-amlight/Dockerfile -t amlight ."
           podman build -f ./container-amlight/Dockerfile -t amlight .
 
