--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -91,31 +91,46 @@ jobs:
           echo "====== Running: podman-compose version ======"
           podman-compose version
 
-      - name: Build container images
+      - name: Build Debian base image
         run: |
           echo "Running: podman build -f ./os_base/debian_base/Dockerfile -t debian_base ."
           podman build -f ./os_base/debian_base/Dockerfile -t debian_base .
 
+      - name: Build Ubuntu base image
+        run: |
           echo "Running: podman build -f ./os_base/ubuntu_base/Dockerfile -t ubuntu_base ."
           podman build -f ./os_base/ubuntu_base/Dockerfile -t ubuntu_base .
 
+      - name: Build mininet image
+        run: |
           echo: "Running: podman build -f ./container-mininet/Dockerfile -t mininet ."
           podman build -f ./container-mininet/Dockerfile -t mininet .
 
+      - name: Build amlight image
+        run: |
           echo "Running: podman build -f ./container-amlight/Dockerfile -t amlight ."
           podman build -f ./container-amlight/Dockerfile -t amlight .
 
+      - name: Build sax image
+        run: |
           echo "Running: podman build -f ./container-sax/Dockerfile -t sax ."
           podman build -f ./container-sax/Dockerfile -t sax .
 
+      - name: Build tenet image
+        run: |
           echo "Running: podman build -f ./container-tenet/Dockerfile -t tenet ."
           podman build -f ./container-tenet/Dockerfile -t tenet .
 
+      - name: Build MongoDB image
+        run: |
           echo "Running: podman build -f ./container-mongo/Dockerfile -t mongo_db ."
           podman build -f ./container-mongo/Dockerfile -t mongo_db .
 
-          # podman build -f ./container-sdx-lc/Dockerfile -t sdx_lc .
+      # - name: Build sdx_lc image
+      #   run: |
+      #     # podman build -f ./container-sdx-lc/Dockerfile -t sdx_lc .
 
+      - name: Build sdx_api image
           echo "Running: podman build -f ./container-app/Dockerfile -t sdx_api ."
           podman build -f ./container-app/Dockerfile -t sdx_api .
 
