Do not run `podman-compose up` in CI yet
It keeps spinning without doing anything useful. There must be a way
to spawn this in the background while running some tests?

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -135,6 +135,7 @@ jobs:
           echo "Running: podman build -f ./container-app/Dockerfile -t sdx_api ."
           podman build -f ./container-app/Dockerfile -t sdx_api .
 
-      - name: Run podman-compose up
-        run: |
-          podman-compose up
+      # TODO: figure out a way to invoke this in CI.    
+      # - name: Run podman-compose up
+      #   run: |
+      #     podman-compose up
