--- a/.github/workflows/images.yml
+++ b/.github/workflows/images.yml
@@ -49,12 +49,12 @@ jobs:
       - name: Install podman [Ubuntu]
         if: matrix.os == 'ubuntu-latest'
         run: |
-          sudo apt install podman podman-compose
+          sudo apt install podman
 
       - name: Install podman [macOS]
         if: matrix.os == 'macos-latest'
         run: |
-          brew install podman podman-compose
+          brew install podman
 
       # - name: Install podman-compose
       #   run: |
