--- a/podman/requirements/requirements.txt
+++ b/podman/requirements/requirements.txt
@@ -1,17 +1,18 @@
-gunicorn
-apscheduler==3.8.0
+wheel==0.37.0
+grpcio==1.41.0
+networkx==2.5.1
+eventlet==0.33.0
+black==20.8b0
 attrs==21.4.0
 backcall==0.1.0
-black== 20.8b0
 boltons==21.0.0
 certifi==2021.10.8
 click==7.1.1
-coverage== 6.3.1
+coverage== 6.4.2
 charset-normalizer==2.0.10
 decorator==4.4.2
 dictpath==0.1.3
-distlib== 0.3.4
-dnspython== 2.2.0
+dnspython== 2.2.1
 docopt==0.6.2
 docutils==0.18.1
 etcd3==0.12.0
